src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Advertisement_Type__c</fullName>
        <label>Advertisement Type</label>
        <picklist>
            <picklistValues>
                <fullName>Print Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hoarding Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Marketing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Code__c</fullName>
        <label>Campaign Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <label>Campaign Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_type_dropdown__c</fullName>
        <label>Campaign type</label>
        <picklist>
            <picklistValues>
                <fullName>ATL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Capture_Point__c</fullName>
        <label>Capture Point</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Lead Generating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand level</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Name__c</fullName>
        <label>Channel Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Campaign_Tactic__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Campaign Tactic</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Print Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment Seminars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lunches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Call Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Banners/Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Website</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Digital_Maketing_Campaign_Code__c</fullName>
        <label>Digital Maketing Campaign Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <label>Keyword</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_NRI__c</fullName>
        <label>Local/NRI</label>
        <picklist>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NRI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <controllingField>Advertisement_Type__c</controllingField>
            <picklistValues>
                <fullName>Front Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5th Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insert</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Page_URL__c</fullName>
        <label>Page URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Project Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Phase/Building Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustenance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Place_Of_Stay__c</fullName>
        <label>Place Of Stay</label>
        <picklist>
            <controllingField>Region__c</controllingField>
            <picklistValues>
                <fullName>Apta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhivpuri Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dolavli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hamrapur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karjat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kasu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kelavli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Khopoli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lowjee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nagothane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nidi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Palasdari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rasayani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somatane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bandra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chembur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chunabhatti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dadar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elphinstone Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Govandi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guru Tegh Bahadur Nagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Khar Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>King&apos;s Circle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kurla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mahim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mankhurd</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Placement__c</fullName>
        <label>Placement</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Print_Adverstisement_Date__c</fullName>
        <label>Print Adverstisement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <picklist>
            <controllingField>Advertisement_Type__c</controllingField>
            <picklistValues>
                <fullName>HMILL Prabhadevi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Tst Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atmosphere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W54</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anmol Fortne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wadhwa Pokhran Road 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TestProject</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Publication_Text__c</fullName>
        <label>Publication</label>
        <picklist>
            <controllingField>Advertisement_Type__c</controllingField>
            <picklistValues>
                <fullName>Times Properties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Times of India</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Publisher__c</fullName>
        <label>Publisher</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <controllingField>Advertisement_Type__c</controllingField>
            <picklistValues>
                <fullName>Beyond Panvel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Suburbs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extended Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extended Western</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navi Mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside Mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SoBo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Suburb</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <picklist>
            <controllingField>Advertisement_Type__c</controllingField>
            <picklistValues>
                <fullName>Quarter Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jacket</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tollfree_Number__c</fullName>
        <label>Tollfree Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TransactionID__c</fullName>
        <displayFormat>CA{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Type_Digital__c</fullName>
        <label>Type (Digital)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <controllingField>Category__c</controllingField>
            <picklistValues>
                <fullName>Newspapers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hoardings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhibition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site branding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TWG Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outdoor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brochure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leaflet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spiral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stationary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3D Walk through</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3D rendering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Micro site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Photography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possession</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed AV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flash presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-mailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TVC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct marketing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Digital_Maketing_Campaign_Code__c</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Marketing</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>equals</operation>
        </filters>
        <label>Marketing</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>My_View</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Tollfree_Number__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Digital_Maketing_Campaign_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>My View</label>
    </listViews>
    <sharingModel>FullAccess</sharingModel>
    <validationRules>
        <fullName>Lock_Budget</fullName>
        <active>true</active>
        <errorConditionFormula>(ISCHANGED(BudgetedCost))&amp;&amp;((PRIORVALUE(BudgetedCost) != 0)||(PRIORVALUE(BudgetedCost) != null))</errorConditionFormula>
        <errorMessage>You Cannot change the Budget Cost</errorMessage>
    </validationRules>
</CustomObject>